<resources>
    <string name="app_name">Resekompanjon</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="tourist_info">Turist Information</string>


<!-- Strings for the SearchBox fragment -->
    <string name="searchbox_trip_start_location">Från&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="searchbox_trip_end_location">Till&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="searchbox_trip_date">Datum&#160;&#160;</string>
    <string name="searchbox_trip_time">Klockan</string>
    <string name="searchbox_leave_by">Avgå</string>
    <string name="searchbox_at_location_latest">Framme senast</string>
    <string name="searchbox_trip_search">Sök Resa</string>

<!-- Strings for Navigation -->
    <string name="nav_start">Start</string>
    <string name="nav_detailed_trip">Nuvarande resa</string>
    <string name="nav_favourites">Favoriter</string>
    <string name="nav_planned_trips">Planerade Resor</string>
    <string name="nav_settings">Inställningar</string>
    <string name="nav_about">Om applikationen</string>

<!-- Generic Strings -->
    <string name="stop">Stopp</string>
    <string name="time">Tid&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="departure">&#160;Avgång</string>
    <string name="arrival">&#160;&#160;Ankomst</string>
    <string name="travel_time">Restid</string>
    <string name="delay">Försening</string>
    <string name="current_location">Nuvarande Position</string>
    <string name="default_end_location">Ange slutplats</string>
    <string name="loading_search_result">Laddar sökresultat</string>
    <string name="tripDetailFromTitleString">Från</string>
    <string name="tripDetailToTitleString">Till&#160;</string>
    <string name="warning_detailed_trip">Du måste vara ansluten till bussens WiFi!</string>

</resources>
